<resources>
    <string name="app_name">Futh</string>
    <string name="not_firebase_auth">Error de autenticación con Firebase</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="not_close_session">No se ha podido cerrar sesión</string>
    <string name="appTitle">Futh</string>

    <!-- Dialogo añadir dispositivo -->
    <string name="idDevice">ID dispositivo</string>
    <string name="tvAddDevice">Añadir dispositivo</string>
    <string name="btnAddDevice">Añadir</string>

    <!-- Dialogo renombrar dispositivo -->
    <string name="tvRenameDevice">Renombrar dispositivo</string>
    <string name="btnRenameDevice">Renombrar</string>
    <string name="etNewNameDevice">Nuevo nombre</string>

    <!-- Dialogo eliminar dispositivo -->
    <string name="tvDeleteDevice">Eliminar dispositivo</string>
    <string name="btnDeleteDevice">Eliminar</string>

    <!-- Botones toolbar -->
    <string name="itemSettings">Ajustes</string>
    <string name="itemDeleteDevice">Eliminar dispositivo</string>
    <string name="itemRenameDevice">Renombrar dispositivo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_fingerprint">Protección con huella dactilar</string>
    <string name="switch_fingerprint_on">Protección con huella dactilar activada</string>
    <string name="switch_fingerprint_off">Protección con huella dactilar desactivada</string>
    <string name="textWelcome">¡BIENVENIDO A FUTH!</string>
    <string name="textDescription">Para comenzar a tener el control, añade tu primer dispositivo o accede a el.</string>
</resources>
