<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:background="@drawable/border_dialog">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccentLight"
        android:layout_marginTop="5dp"
        android:text="@string/tvRenameDevice"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:theme="@style/TextInputLayoutTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etIdRenameDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idDevice"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="50dp"
        android:theme="@style/TextInputLayoutTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNewNameDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNewNameDevice"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnRenameDevice"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@animator/rounded_button_degradado"
        android:textColor="@android:color/white"
        android:text="@string/btnRenameDevice"/>

</LinearLayout>